<resources>
    <string name="app">Westgalaxy Connect</string>
    <string name="trademark">Westgalaxy Connect 由西河口引力波科技注册持有</string>
    <string name="no_profiles_loaded">欢迎使用WestgalaxyVPN,你可以到程序菜单导入.ovpn配置或查看帮助</string>
    <string name="ok">好的</string>
    <string name="about_menu">关于</string>
    <string name="about_text" formatted="false">WestgalaxyVPN Connect %s (build %d)</string>
    <string name="beta_expire_warn">注意,此版本将在 %s过期.</string>
    <string name="log_title">WestgalaxyVPN日志文件</string>
    <string name="log_pause">暂停</string>
    <string name="log_resume">继续</string>
    <string name="help_menu">帮助</string>
    <string name="profile_prompt">WestgalaxyVPN设置:</string>
    <string name="proxy_prompt">端口:</string>
    <string name="server_prompt">服务器:</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="pk_password">私有密码:</string>
    <string name="password_save_prompt">保存</string>
    <string name="pk_password_save_prompt">保存</string>
    <string name="connect">连接吧,少年</string>
    <string name="disconnect">断开</string>
    <string name="core_thread_active">开始中</string>
    <string name="core_thread_inactive">停止中</string>
    <string name="connecting">连接中...</string>
    <string name="reconnecting">重连中...</string>
    <string name="connected">已链接</string>
    <string name="disconnected">已断开</string>
    <string name="pause">暂停中(等待网络链接)</string>
    <string name="resume">恢复</string>
    <string name="resolve">查询DNS中</string>
    <string name="wait">等候服务器响应</string>
    <string name="wait_proxy">等候代理端口相应</string>
    <string name="auth">认证中</string>
    <string name="rsa_sign">密码确认中</string>
    <string name="get_config">从服务器获取配置</string>
    <string name="assign_ip">注册IP地址中</string>
    <string name="add_routes">添加路由中</string>
    <string name="client_halt">客户端被服务器挂起</string>
    <string name="client_restart">客户端被服务器重启</string>
    <string name="auth_failed">认证失败</string>
    <string name="pem_password_fail">WestgalaxyVPN私有密码错误</string>
    <string name="cert_verify_fail">服务器证书验证错误</string>
    <string name="tls_version_min">WestgalaxyVPN服务器TLS版本过低</string>
    <string name="dynamic_challenge">认证出错</string>
    <string name="tun_setup_failed">Tun交互建立失败</string>
    <string name="tun_iface_create">创建Tun交互建立错误</string>
    <string name="tap_not_supported">基于隧道的TAP未被支持</string>
    <string name="profile_not_found">配置未找到</string>
    <string name="profile_parse_error">解析配置发生错误</string>
    <string name="profile_conflict">WestgalaxyVPN一个已连接的配置文件发生冲突</string>
    <string name="profile_write_error">WestgalaxyVPN配置保存失败</string>
    <string name="profile_filename_error">配置必须以.ovpn为文件类型</string>
    <string name="config_file_parse_error">WestgalaxyVPN设置读取失败</string>
    <string name="need_creds_error">WestgalaxyVPN要求的凭据没有提供</string>
    <string name="creds_error">WestgalaxyVPN凭据错误</string>
    <string name="core_thread_error">WestgalaxyVPN核心错误</string>
    <string name="core_thread_abandoned">WestgalaxyVPN连接失败(核心与线程未匹配)</string>
    <string name="file_read_error">无法读取文件</string>
    <string name="epki_error">外部PKI错误</string>
    <string name="epki_invalid_alias">证书和私钥丢失。请重试登录。</string>
    <string name="epki_missing_cert">无法获得私钥认证</string>
    <string name="connection_timeout">WestgalaxyVPN连接超时</string>
    <string name="inactive_timeout">WestgalaxyVPN闲置断开</string>
    <string name="proxy_need_creds">需要代理凭证</string>
    <string name="proxy_error">代理错误</string>
    <string name="proxy_context_expired">登录超时</string>
    <string name="unknown">未知WestgalaxyVPN事件发生</string>
    <string name="import_help_title">配置已导入</string>
    <string name="import_help_text">要创建一个快捷方式，或访问配置文件上下文菜单（用于重命名、删除等），触摸右边编辑图标。切换到不同的配置文件，只需点击相关名称。</string>
    <string name="profile_merge_exception">配置导入失败</string>
    <string name="profile_merge_ovpn_ext_fail">配置文件的扩展名为.ovpn</string>
    <string name="profile_merge_ovpn_file_fail">读取配置错误</string>
    <string name="profile_merge_ref_fail">配置内的内容读取错误</string>
    <string name="profile_merge_multiple_ref_fail">配置内多处内容读取错误</string>
    <string name="ui_reset">UI重置</string>
    <string name="import_menu">导入</string>
    <string name="import_private_tunnel_profile">导入私有配置</string>
    <string name="import_profile_remote">从服务器导入</string>
    <string name="import_profile">从SD卡导入</string>
    <string name="import_pkcs12">从SD卡导入证书文件</string>
    <string name="advanced_menu">高级</string>
    <string name="show_raw_stats">显示原始数据</string>
    <string name="show_log">显示日志文件</string>
    <string name="exit_partial">退出</string>
    <string name="exit_full">完全退出</string>
    <string name="forget_creds">忘记认证</string>
    <string name="add_proxy">添加代理</string>
    <string name="add_shortcut_menu">添加快捷方式</string>
    <string name="add_shortcut_connect">添加连接快捷方式</string>
    <string name="add_shortcut_disconnect">添加断开快捷方式</string>
    <string name="add_shortcut_app">添加应用程序快捷方式</string>
    <string name="more_menu">更多...</string>
    <string name="preferences">设置</string>
    <string name="openvpn_settings">WestgalaxyVPN设置</string>
    <string name="vpn_proto_title">VPN协议</string>
    <string name="vpn_proto_summary">选择VPN协议</string>
    <string name="conn_timeout_title">连接超时</string>
    <string name="conn_timeout_summary">WestgalaxyVPN重试多久放弃连接?</string>
    <string name="compression_title">压缩</string>
    <string name="compression_summary">隧道压缩选项</string>
    <string name="pause_vpn_on_blanked_screen_title">节省电量</string>
    <string name="pause_vpn_on_blanked_screen_summary">黑屏断开连接</string>
    <string name="enable_notifications_title">通知</string>
    <string name="enable_notifications_summary">展开通知内容</string>
    <string name="auto_keyboard_title">自动键盘</string>
    <string name="auto_keyboard_summary">自动启用/禁用悬浮键盘</string>
    <string name="tun_persist_title">无缝隧道</string>
    <string name="tun_persist_summary">阻止互联网而VPN是暂停或重新连接（注：Android 4.4.2 4.4版本有一个bug，阻止使用该选项）</string>
    <string name="google_dns_fallback_title">DNS回滚</string>
    <string name="google_dns_fallback_summary">“使用谷歌DNS服务器作为后备连接通过VPN隧道路由的所有互联网流量但不定义任何VPN的DNS服务器”</string>
    <string name="autostart_title">重启后重连</string>
    <string name="autostart_summary">如果一个VPN连接在设备关机是活跃的，设备重启后重连</string>
    <string name="autostart_finish_on_connect_title">快捷方式最小化</string>
    <string name="autostart_finish_on_connect_summary">当VPN连接是一个快捷方式或自动重启启动，而不需要用户的输入进行验证的连接，最小话VPN连接app。</string>
    <string name="force_aes_cbc_ciphersuites_title">强制使用AES-CBC密码套件</string>
    <string name="force_aes_cbc_ciphersuites_summary">启用此选项有时可以帮助连接到传统服务器。</string>
    <string name="alt_proxy_title">私有隧道代理</string>
    <string name="alt_proxy_summary">开启私有隧道代理</string>
    <string name="tls_version_min_override_title">TLS版本最低要求</string>
    <string name="tls_version_min_override_summary">选择连接对话中的SSL/TLS版本.</string>
    <string name="select_profile">选择.ovpn导入</string>
    <string name="select_pkcs12">选择PKCS#12文件导入</string>
    <string name="profile_context_none_selected">无选定配置</string>
    <string name="profile_context_menu_change_profile">选择另一个配置</string>
    <string name="profile_context_menu_create_shortcut">创建链接快捷方式</string>
    <string name="profile_context_menu_delete">删除配置</string>
    <string name="profile_context_menu_rename">重命名配置</string>
    <string name="profile_context_forget_creds">忘记认证</string>
    <string name="profile_context_cancel">取消</string>
    <string name="profile_import_success">导入成功</string>
    <string name="profile_delete_success">删除成功</string>
    <string name="profile_delete_failed">删除失败</string>
    <string name="profile_rename_success">重命名成功</string>
    <string name="profile_rename_failed">重命名失败</string>
    <string name="rename_profile_title">重命名该配置</string>
    <string name="rename_profile_yes">是的</string>
    <string name="rename_profile_cancel">取消</string>
    <string name="delete_profile_confirm_title">确认删除</string>
    <string name="delete_profile_confirm_yes">似的</string>
    <string name="delete_profile_confirm_cancel">取消</string>
    <string name="select_certificate_title">选择证书</string>
    <string name="select_certificate_message">“这个配置文件不包括客户端证书。继续连接吗？”</string>
    <string name="select_certificate_no">继续</string>
    <string name="select_certificate_yes">选择证书</string>
    <string name="create_shortcut_title">创建连接快捷方式</string>
    <string name="create_shortcut_prompt">配置连接名字:</string>
    <string name="create_shortcut_yes">创建</string>
    <string name="create_shortcut_cancel">取消</string>
    <string name="disconnect_shortcut_title">断开</string>
    <string name="app_shortcut_title">WestgalaxyVPN Connect</string>
    <string name="add_shortcut_help_text">在主页上创建一个给定的配置文件的连接快捷方式。当您接触的快捷方式，配置文件将自动连接。</string>
    <string name="shortcut_no_profiles">[无配置文件加载]</string>
    <string name="raw_stats_title">重置WestgalaxyVPN状态</string>
    <string name="stats_group_header">连接状态:</string>
    <string name="info_group_header">连接信息:</string>
    <string name="last_pkt_recv">收到数量</string>
    <string name="bytes_in">下行</string>
    <string name="bytes_out">上行</string>
    <string name="duration">已连接</string>
    <string name="ipv4_addr">IPv4</string>
    <string name="ipv6_addr">IPv6</string>
    <string name="user">用户名</string>
    <string name="client_ip">客户端IP</string>
    <string name="server_host">服务器</string>
    <string name="server_ip">服务器IP</string>
    <string name="server_port">端口</string>
    <string name="server_proto">协议</string>
    <string name="touch_more">查看更多</string>
    <string name="touch_less">收起</string>
    <string name="lpr_gt_1_hour_ago">> 1 小时以前</string>
    <string name="lpr_gt_n_min_ago">> %d 分钟之前</string>
    <string name="lpr_n_sec_ago">%d 秒之前</string>
    <string name="lpr_1_sec_ago">1 秒之前</string>
    <string name="lpr_lt_1_sec_ago">&lt; 1 秒之前</string>
    <string name="notification_initial_content">WestgalaxyVPN</string>
    <string name="import_server_prompt">访问服务器的主机名:</string>
    <string name="import_button_text">导入配置</string>
    <string name="import_cancel_button_text">取消</string>
    <string name="cert_warn_title">接受无效的证书?</string>
    <string name="cert_warn_accept">接受</string>
    <string name="cert_warn_reject">拒绝</string>
    <string name="profile_import_error">配置导入失败</string>
    <string name="profile_import_invalid_cert">网站无有效的SSL证书</string>
    <string name="no_profile_types">未识别配置文件类型</string>
    <string name="https_client_task_error">HTTPS客户端任务错误</string>
    <string name="cr_title">服务器质询</string>
    <string name="cr_error">无响应</string>
    <string name="cr_cancel">取消</string>
    <string name="cr_continue">继续</string>
    <string name="import_autologin_checkbox_text">导入自登录配置</string>
    <string name="ar_title">导入配置无效</string>
    <string name="ar_accept">接受</string>
    <string name="proxy_title_add">添加HTTP代理服务器</string>
    <string name="proxy_friendly_name">自定义代理名称（可选）</string>
    <string name="proxy_host">主机名或IP地址</string>
    <string name="proxy_port">代理端口</string>
    <string name="proxy_allow_cleartext_auth_checkbox">允许基本身份验证（有可能不安全）</string>
    <string name="proxy_save_button">保存</string>
    <string name="proxy_cancel_button">取消</string>
    <string name="proxy_username">用户名:</string>
    <string name="proxy_password">密码:</string>
    <string name="proxy_remember_creds_prompt">记住凭据</string>
    <string name="proxy_ok_button">提交</string>
    <string name="proxy_prev_creds_not_accepted">注：先前的凭证将被覆盖</string>
    <string name="file_dialog_new">新建</string>
    <string name="file_dialog_select">选中</string>
    <string name="file_dialog_file_name">文件名:</string>
    <string name="file_dialog_cancel">取消</string>
    <string name="file_dialog_create">保存</string>
    <string name="file_dialog_no_data">无档案</string>
    <string name="privatetunnel_ad">您安全的VPN</string>
    <string name="openvpn_ad">为您的企业VPN解决方案</string>
    <string name="privatetunnel_link">https://www.privatetunnel.com/</string>
    <string name="openvpn_link">http://openvpn.net/as/</string>
</resources>