<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/main_scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:padding="3.0mm" style="@style/group">
        <LinearLayout android:id="@id/post_import_help_blurb" android:paddingBottom="10.0dip" android:visibility="gone" style="@style/info_box">
            <LinearLayout android:background="@drawable/info_box" style="@style/group_wrap">
                <TextView android:textStyle="bold" android:text="@string/import_help_title" style="@style/item" />
                <TextView android:id="@id/import_help_text" android:text="@string/import_help_text" style="@style/subtitle" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/profile_group" style="@style/prop_layout">
            <LinearLayout style="@style/group">
                <TextView android:text="@string/profile_prompt" style="@style/label" />
                <Spinner android:id="@id/profile" android:focusable="false" android:prompt="@string/profile_prompt" style="@style/item_wrap" />
            </LinearLayout>
            <ImageButton android:id="@id/profile_edit" android:src="@drawable/edit" style="@style/prop_image" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/proxy_group" style="@style/prop_layout">
            <LinearLayout style="@style/group">
                <TextView android:text="@string/proxy_prompt" style="@style/label" />
                <Spinner android:id="@id/proxy" android:prompt="@string/proxy_prompt" style="@style/item_wrap" />
            </LinearLayout>
            <ImageButton android:id="@id/proxy_edit" android:src="@drawable/edit" style="@style/prop_image" />
        </RelativeLayout>
        <LinearLayout android:id="@id/server_group" style="@style/group">
            <TextView android:text="@string/server_prompt" style="@style/label" />
            <Spinner android:id="@id/server" android:prompt="@string/server_prompt" style="@style/item_wrap" />
        </LinearLayout>
        <LinearLayout android:id="@id/username_group" style="@style/group">
            <TextView android:text="@string/username" style="@style/label" />
            <EditText android:id="@id/username" android:nextFocusDown="@id/pk_password" android:imeOptions="actionNext" style="@style/edit" />
        </LinearLayout>
        <LinearLayout android:id="@id/pk_password_group" style="@style/group">
            <TextView android:text="@string/pk_password" style="@style/label" />
            <RelativeLayout style="@style/group_horizontal">
                <EditText android:id="@id/pk_password" android:nextFocusDown="@id/password" android:password="true" android:layout_toLeftOf="@id/pk_password_save" android:layout_alignParentLeft="true" android:imeOptions="actionNext" style="@style/edit" />
                <CheckBox android:id="@id/pk_password_save" android:text="@string/pk_password_save_prompt" android:layout_alignParentRight="true" style="@style/item_wrap" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/password_group" style="@style/group">
            <TextView android:text="@string/password" style="@style/label" />
            <RelativeLayout style="@style/group_horizontal">
                <EditText android:id="@id/password" android:nextFocusDown="@id/response" android:password="true" android:layout_toLeftOf="@id/password_save" android:layout_alignParentLeft="true" android:imeOptions="actionNext" style="@style/edit" />
                <CheckBox android:id="@id/password_save" android:text="@string/password_save_prompt" android:layout_alignParentRight="true" style="@style/item_wrap" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/cr_group" style="@style/group">
            <TextView android:id="@id/challenge" style="@style/label" />
            <EditText android:id="@id/response" android:imeOptions="actionNext" style="@style/edit" />
        </LinearLayout>
        <ProgressBar android:id="@id/progress" android:paddingBottom="8.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.ProgressBar.Horizontal" />
        <LinearLayout android:gravity="center_vertical" android:paddingTop="8.0sp" style="@style/group_horizontal">
            <ImageView android:id="@id/status_icon" style="@style/image" />
            <TextView android:id="@id/status" android:paddingLeft="8.0sp" style="@style/item" />
        </LinearLayout>
        <LinearLayout android:id="@id/button_group" style="@style/group">
            <Button android:id="@id/connect" android:text="@string/connect" style="@style/button" />
            <Button android:id="@id/disconnect" android:text="@string/disconnect" style="@style/button" />
        </LinearLayout>
        <LinearLayout android:id="@id/conn_details_group" android:paddingTop="8.0sp" style="@style/stats_group">
            <LinearLayout android:id="@id/conn_details_boxed" style="@style/stats_boxed">
                <LinearLayout android:id="@id/stats_group" style="@style/stats_section">
                    <TextView android:text="@string/stats_group_header" style="@style/stats_header" />
                    <TableLayout style="@style/stats_table">
                        <TableRow style="@style/stats_row">
                            <TextView android:text="@string/duration" style="@style/stats_key" />
                            <TextView android:id="@id/duration" style="@style/stats_value" />
                        </TableRow>
                        <TableRow style="@style/stats_row">
                            <TextView android:text="@string/last_pkt_recv" style="@style/stats_key" />
                            <TextView android:id="@id/last_pkt_recv" style="@style/stats_value" />
                        </TableRow>
                        <TableRow style="@style/stats_row">
                            <TextView android:text="@string/bytes_in" style="@style/stats_key" />
                            <TextView android:id="@id/bytes_in" style="@style/stats_value" />
                        </TableRow>
                        <TableRow style="@style/stats_row">
                            <TextView android:text="@string/bytes_out" style="@style/stats_key" />
                            <TextView android:id="@id/bytes_out" style="@style/stats_value" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/stats_expansion_group" style="@style/stats_group">
                    <LinearLayout android:id="@id/info_group" style="@style/stats_section">
                        <TextView android:paddingTop="12.0sp" android:text="@string/info_group_header" style="@style/stats_header" />
                        <TableLayout style="@style/stats_table">
                            <TableRow android:id="@id/ipv4_addr_row" style="@style/stats_row">
                                <TextView android:text="@string/ipv4_addr" style="@style/stats_key" />
                                <TextView android:id="@id/ipv4_addr" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/ipv6_addr_row" style="@style/stats_row">
                                <TextView android:text="@string/ipv6_addr" style="@style/stats_key" />
                                <TextView android:id="@id/ipv6_addr" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/user_row" style="@style/stats_row">
                                <TextView android:text="@string/user" style="@style/stats_key" />
                                <TextView android:id="@id/user" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/client_ip_row" style="@style/stats_row">
                                <TextView android:text="@string/client_ip" style="@style/stats_key" />
                                <TextView android:id="@id/client_ip" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/server_host_row" style="@style/stats_row">
                                <TextView android:text="@string/server_host" style="@style/stats_key" />
                                <TextView android:id="@id/server_host" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/server_ip_row" style="@style/stats_row">
                                <TextView android:text="@string/server_ip" style="@style/stats_key" />
                                <TextView android:id="@id/server_ip" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/server_port_row" style="@style/stats_row">
                                <TextView android:text="@string/server_port" style="@style/stats_key" />
                                <TextView android:id="@id/server_port" style="@style/stats_value" />
                            </TableRow>
                            <TableRow android:id="@id/server_proto_row" style="@style/stats_row">
                                <TextView android:text="@string/server_proto" style="@style/stats_key" />
                                <TextView android:id="@id/server_proto" style="@style/stats_value" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff8080ff" android:layout_gravity="center_horizontal" android:id="@id/details_more_less" android:paddingTop="8.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:padding="5.0dip" style="@style/group">
            <View style="@style/spacer16" />
            <LinearLayout android:orientation="horizontal" style="@style/ad_layout">
                <ImageView android:src="@drawable/pt" style="@style/ad_image" />
                <LinearLayout android:orientation="vertical" style="@style/ad_layout">
                    <TextView android:text="@string/privatetunnel_ad" style="@style/item" />
                    <TextView android:autoLink="web" android:text="@string/privatetunnel_link" style="@style/item" />
                </LinearLayout>
            </LinearLayout>
            <View style="@style/spacer16" />
            <LinearLayout android:orientation="horizontal" style="@style/ad_layout">
                <ImageView android:src="@drawable/icon" style="@style/ad_image" />
                <LinearLayout android:orientation="vertical" style="@style/ad_layout">
                    <TextView android:text="@string/openvpn_ad" style="@style/item" />
                    <TextView android:autoLink="web" android:text="@string/openvpn_link" style="@style/item" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View style="@style/spacer16" />
        <TextView android:text="@string/trademark" style="@style/footer" />
    </LinearLayout>
</ScrollView>