<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/fdLinearLayoutList" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:id="@id/fdLinearLayoutSelect" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:id="@id/fdButtonNew" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/file_dialog_new" android:layout_weight="0.33" />
                <Button android:id="@id/fdButtonSelect" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/file_dialog_select" android:layout_weight="0.33" />
                <Button android:id="@id/fdButtonCancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/file_dialog_cancel" android:layout_weight="0.33" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/fdLinearLayoutCreate" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <TextView android:id="@id/fdTextViewFilename" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_dialog_file_name" />
            <EditText android:id="@id/fdEditTextFile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:id="@id/fdButtonCreate" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/file_dialog_create" android:layout_weight="0.7" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/fdLinearLayoutList">
        <TextView android:id="@id/fdPrompt" style="@style/item" />
        <TextView android:id="@id/fdPath" style="@style/item" />
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <TextView android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/file_dialog_no_data" />
    </LinearLayout>
</RelativeLayout>